2004.03.16 SHIMADA Mitsunobu <simm@fan.jp>
	* misc/style/etdiary/etdiary_style.rb: fix bug: section without subtitle.

2004-03-15  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary.rb (apply_plugin): return empty string if input string is
	nil.

2004.03.15 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/*/00default.rb: resurrection of category_anchor. Thanks mput.

2004.03.15 Junichiro Kita <kita@kitaj.no-ip.com>
	* index.rb, tdiary.rb, skel/category.rhtml, plugin/*/00default.rb: indexed category.
	 Thanks mass and phonondrive.com.

2004-03-04 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: do not call update_proc when TSUKKOMI was filtered.
	* plugin/00default.rb: fix bug in comment_mail_send. 

2004-02-27 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, skel/*: call update_proc after all plugins loaded.

2004-02-17 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: fix TDiary::Filter::Filter#comment_filter prototype.

2004.02.12 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary/filter/default.rb: support ruby 1.6.x.

2004-02-11 zunda <zunda at freeshell.org>
	* tdiary.rb, tdiary/filter/default.rb: fix bugs.

2004-02-10 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, tdiary/filter/default.rb: TSUKKOMI and referer filter feature.

2004-02-09 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: fuzzy regexp in my plugin.
	* skel/mail.rtxt*: anchor move to the bottom of body.

2004-02-09 mput <mput@users.sf.net>
	* tdiary.rb: fix Plugin#apply_plugin.

2004-02-04 UECHI Yasumasa <uh@u.dhis.portside.net>
	* misc/style/rd/rd_style.rb: rescue ParseError

2004-01-26 UECHI Yasumasa <uh@u.dhis.portside.net>
	* misc/style/rd/rd_style.rb: fix body_to_html

2004.01.21 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: call update_proc in TDiaryTrackBackReceive#eval_rhtml for recent_trackback3.rb.

2004-01-17 TADA Tadashi <sho@spc.gr.jp>
	* plugin/{ja,en}/00default.rb: split @theme_location_comment.
	* theme/base.css: modify style of calendar3 plugin.

2004-01-17 TADA Tadashi <sho@spc.gr.jp>