@@ -1,3 +1,7 @@
+2004-04-04 TADA Tadashi <sho@spc.gr.jp>
+	* tdiary.rb: apply comment_filter for TrackBack.
+	* tdiary/filter/default.rb: reject without GET method in comment_filter.
+
 2004.03.16 SHIMADA Mitsunobu <simm@fan.jp>
 	* misc/style/etdiary/etdiary_style.rb: fix bug: section without subtitle.
 
